2008-01-24  Dan Williams  <dcbw@redhat.com>

	Fix gnome.org #505899

	* src/applet.c
	  src/applet.h
		- (applet_find_active_connection_for_device): make public

	* src/applet-dialogs.c
		- (info_dialog_get_label): remove; use glade_xml_get_widget() instead
		- (set_eap_info_label): handle label creation for 802.1x and WPA
			Enterprise connections
		- (info_dialog_update): add a "Security" label that shows the security
			in use (wireless only for now); also hide the "Secondary DNS" label
			if there's only one DNS server.  Use glade_xml_get_widget() instead
			of info_dialog_get_label().
		- (applet_info_dialog_show): get the active connection for the active
			device and pass that on

2008-01-23  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/ws-wep-key.c
		- (wep_entry_filter_cb, ws_wep_key_new): filter key entry input and
			allow only those characters that the key algorithm allows.  Fixes
			gnome.org #332951

2008-01-23  Dan Williams  <dcbw@redhat.com>

	* src/applet-dialogs.c
	  src/applet-device-wireless.c
		- (applet_warning_dialog_show, other_wireless_activate_cb,
		   new_network_activate_cb): get the right behavior when faced with
			metacticy's focus stealing prevention; we really do want the key
			dialog to come up on top.  The issue is somewhat mitigated by the
			fact that any input won't really leak.

2008-01-21  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wired.c
		- (add_connection_items): s/disabled/carrier; flip meaning
		- (wired_add_menu_item): s/disabled/carrier; flip meaning.  It's more
			clear this way.  (gnome.org #511099)

2008-01-21  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-gsm.c
		- (gsm_new_auto_connection): actually add the GSM setting to the
			connection object so it's valid
		- (gsm_get_icon): use wwan_icon member

	* src/applet.c
	  src/applet.h
		- (get_device_class): handle CDMA mobile broadband cards
		- (applet_menu_item_activate_helper): remove wrong check for connection